main seccion hero

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Poller+One&display=swap">
 </head>
 
 <body>
@@ -45,12 +47,21 @@
 
             </div>
         </header>
-        <div class="hero"></div>
+
+
+
+        <main class="main_section">
+            <!-- Hero sección -->
+            <section class="hero-home-page">
+                <div class="wrap-hero-home-page">
+                    <h1>Diseño Web de Restaurante</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ex suscipit fugiat at facere,
+                        libero
+                        fugit adipisci omnis porro, natus commodi velit aspernatur impedit blanditiis!</p>
+                    <a href="/" class="cta-main">Hacer un pedido</a>
+                </div>
+            </section>
     </div>
-
-
-    <main class="main_section">
-
     </main>
     <footer class="footer">
 
