--- a/index.html
+++ b/index.html
@@ -62,71 +62,139 @@
                 </div>
             </section>
     </div>
+
     <!-- Tarjetas de comida -->
     <section class="wrap section">
         <div class="wrap-title-section">
             <h2>Tarjetas de Comida</h2>
         </div>
+
+
+        <div class="column-4 columns">
+            <div style="background: url(img/pizza.jpg) center; background-size: cover;" class="tarjeta-rest">
+                <div class="wrap-text_tarjeta-rest">
+                    <h3>Pizza Especial</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores adipisci corporis itaque, libero
+                        quod eos!</p>
+                    <div class="cta-wrap_tarjeta-rest">
+                        <div class="precio_tarjeta-rest">
+                            <span>$ 30000</span>
+                        </div>
+                        <div class="cta_tarjeta-rest">
+                            Pedir ahora
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div style="background: url(img/hamburguesa.jpg) center; background-size: cover;" class="tarjeta-rest">
+                <div class="wrap-text_tarjeta-rest">
+                    <h3>Pizza Especial</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores adipisci corporis itaque, libero
+                        quod eos!</p>
+                    <div class="cta-wrap_tarjeta-rest">
+                        <div class="precio_tarjeta-rest">
+                            <span>$ 30000</span>
+                        </div>
+                        <div class="cta_tarjeta-rest">
+                            Pedir ahora
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div style="background: url(img/sushi.jpg) center; background-size: cover;" class="tarjeta-rest">
+                <div class="wrap-text_tarjeta-rest">
+                    <h3>Pizza Especial</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores adipisci corporis itaque, libero
+                        quod eos!</p>
+                    <div class="cta-wrap_tarjeta-rest">
+                        <div class="precio_tarjeta-rest">
+                            <span>$ 30000</span>
+                        </div>
+                        <div class="cta_tarjeta-rest">
+                            Pedir ahora
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div style="background: url(img/alitas_de_pollo.jpg) center; background-size: cover;" class="tarjeta-rest">
+                <div class="wrap-text_tarjeta-rest">
+                    <h3>Pizza Especial</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores adipisci corporis itaque, libero
+                        quod eos!</p>
+                    <div class="cta-wrap_tarjeta-rest">
+                        <div class="precio_tarjeta-rest">
+                            <span>$ 30000</span>
+                        </div>
+                        <div class="cta_tarjeta-rest">
+                            Pedir ahora
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <div class="column-4 columns">
-        <div style="background: url(img/pizza.jpg) center; background-size: cover;" class="tarjeta-rest">
-            <div class="wrap-text_tarjeta-rest">
-                <h3>Pizza Especial</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores adipisci corporis itaque, libero quod eos!</p>
-                <div class="cta-wrap_tarjeta-rest">
-                    <div class="precio_tarjeta-rest">
-                        <span>$ 30000</span>
-                    </div>
-                    <div class="cta_tarjeta-rest">
-                        Pedir ahora
-                    </div>
-                </div>
+    <!-- Menu Restaurante -->
+    <section class="wrap section">
+        <div class="wrap-title-section">
+            <h2>Menús de Restaurante</h2>
+        </div>
+        <div class="column-3 columns">
+            <div style="background: url(img/fondo_Rest.jpg) center; background-size: cover;" class="menu-restaurante">
+                <h3>Menú mediodia</h3>
+                <hr>
+                <h4>Primeros Platos</h4>
+                <p>Lorem, ipsum dolor.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Lorem, ipsum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <br>
+                <h4>Segundos Platos</h4>
+                <p>Lorem, ipsum dolor.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Lorem, ipsum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <br>
+                <p class="precio-menu">Precio: <span>17€</span></p>
+            </div>
+            <div style="background: url(img/fondo_Rest.jpg) center; background-size: cover;" class="menu-restaurante">
+                <h3>Menú mediodia</h3>
+                <hr>
+                <h4>Primeros Platos</h4>
+                <p>Lorem, ipsum dolor.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Lorem, ipsum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <br>
+                <h4>Segundos Platos</h4>
+                <p>Lorem, ipsum dolor.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Lorem, ipsum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <br>
+                <p class="precio-menu">Precio: <span>17€</span></p>
+            </div>
+            <div style="background: url(img/fondo_Rest.jpg) center; background-size: cover;" class="menu-restaurante">
+                <h3>Menú mediodia</h3>
+                <hr>
+                <h4>Primeros Platos</h4>
+                <p>Lorem, ipsum dolor.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Lorem, ipsum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <br>
+                <h4>Segundos Platos</h4>
+                <p>Lorem, ipsum dolor.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Lorem, ipsum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <br>
+                <p class="precio-menu">Precio: <span>17€</span></p>
             </div>
         </div>
-        <div style="background: url(img/hamburguesa.jpg) center; background-size: cover;" class="tarjeta-rest">
-            <div class="wrap-text_tarjeta-rest">
-                <h3>Pizza Especial</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores adipisci corporis itaque, libero quod eos!</p>
-                <div class="cta-wrap_tarjeta-rest">
-                    <div class="precio_tarjeta-rest">
-                        <span>$ 30000</span>
-                    </div>
-                    <div class="cta_tarjeta-rest">
-                        Pedir ahora
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div style="background: url(img/sushi.jpg) center; background-size: cover;" class="tarjeta-rest">
-            <div class="wrap-text_tarjeta-rest">
-                <h3>Pizza Especial</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores adipisci corporis itaque, libero quod eos!</p>
-                <div class="cta-wrap_tarjeta-rest">
-                    <div class="precio_tarjeta-rest">
-                        <span>$ 30000</span>
-                    </div>
-                    <div class="cta_tarjeta-rest">
-                        Pedir ahora
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div style="background: url(img/alitas_de_pollo.jpg) center; background-size: cover;" class="tarjeta-rest">
-            <div class="wrap-text_tarjeta-rest">
-                <h3>Pizza Especial</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores adipisci corporis itaque, libero quod eos!</p>
-                <div class="cta-wrap_tarjeta-rest">
-                    <div class="precio_tarjeta-rest">
-                        <span>$ 30000</span>
-                    </div>
-                    <div class="cta_tarjeta-rest">
-                        Pedir ahora
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    </section>
+
+    <!-- Galeria de imagenes -->
     </main>
     <footer class="footer">
 
