--- a/index.html
+++ b/index.html
@@ -195,7 +195,56 @@
     </section>
 
     <!-- Galeria de imagenes -->
+    <section class="wrap section">
+        <div class="wrap-title-section">
+            <h2>Galeria de imagenes</h2>
+        </div>
+        <div class="column-4 galeria-platos">
+            <div class="imagen-galeria">
+                <img src="img/galeria_hamb.jpg" alt="">
+            </div>  
+            <div class="imagen-galeria">
+                <img src="img/galeria_pizza.jpg" alt="">
+            </div>   
+            <div class="imagen-galeria">
+                <img src="img/galeria_pollojpg.jpg" alt="">
+            </div>   
+            <div class="imagen-galeria">
+                <img src="img/galeria_sushi.jpg" alt="">
+            </div>   
+            <div class="imagen-galeria">
+                <img src="img/galeria_hamb.jpg" alt="">
+            </div>   
+            <div class="imagen-galeria">
+                <img src="img/galeria_sushi.jpg" alt="">
+            </div>   
+            <div class="imagen-galeria">
+                <img src="img/galeria_pollojpg.jpg" alt="">
+            </div>     
+            <div class="imagen-galeria">
+                <img src="img/galeria_hamb.jpg" alt="">
+            </div>   
+            <div class="imagen-galeria">
+                <img src="img/galeria_hamb.jpg" alt="">
+            </div>   
+            <div class="imagen-galeria">
+                <img src="img/galeria_hamb.jpg" alt="">
+            </div>   
+            <div class="imagen-galeria">
+                <img src="img/galeria_sushi.jpg" alt="">
+            </div>   
+            <div class="imagen-galeria">
+                <img src="img/color_n2.jpg" alt="">
+            </div>    
+        </div>
+    </section>
+
+    <!-- Articulos de blog -->
+
     </main>
+
+
+
     <footer class="footer">
 
     </footer>
