--- a/index.html
+++ b/index.html
@@ -201,45 +201,115 @@
         </div>
         <div class="column-4 galeria-platos">
             <div class="imagen-galeria">
-                <img src="img/galeria_hamb.jpg" alt="">
+                <img src="img/galeria_pollojpg.jpg" alt="">
             </div>  
             <div class="imagen-galeria">
-                <img src="img/galeria_pizza.jpg" alt="">
+                <img src="img/galeria_pollojpg.jpg" alt="">
             </div>   
             <div class="imagen-galeria">
                 <img src="img/galeria_pollojpg.jpg" alt="">
             </div>   
             <div class="imagen-galeria">
-                <img src="img/galeria_sushi.jpg" alt="">
+                <img src="img/galeria_pollojpg.jpg" alt="">
             </div>   
             <div class="imagen-galeria">
-                <img src="img/galeria_hamb.jpg" alt="">
+                <img src="img/galeria_pollojpg.jpg" alt="">
             </div>   
             <div class="imagen-galeria">
-                <img src="img/galeria_sushi.jpg" alt="">
+                <img src="img/galeria_pollojpg.jpg" alt="">
             </div>   
             <div class="imagen-galeria">
                 <img src="img/galeria_pollojpg.jpg" alt="">
             </div>     
             <div class="imagen-galeria">
-                <img src="img/galeria_hamb.jpg" alt="">
+                <img src="img/galeria_pollojpg.jpg" alt="">
             </div>   
             <div class="imagen-galeria">
-                <img src="img/galeria_hamb.jpg" alt="">
+                <img src="img/galeria_pollojpg.jpg" alt="">
             </div>   
             <div class="imagen-galeria">
-                <img src="img/galeria_hamb.jpg" alt="">
+                <img src="img/galeria_pollojpg.jpg" alt="">
             </div>   
             <div class="imagen-galeria">
-                <img src="img/galeria_sushi.jpg" alt="">
+                <img src="img/galeria_pollojpg.jpg" alt="">
             </div>   
             <div class="imagen-galeria">
-                <img src="img/color_n2.jpg" alt="">
+                <img src="img/galeria_pollojpg.jpg" alt="">
             </div>    
         </div>
     </section>
 
     <!-- Articulos de blog -->
+    <section class="section">
+        <div class="wrap-title-section">
+            <h2>Articulos del Blog</h2>
+        </div>
+        <div class="card-wrap">
+            <article class="card">
+                <header class="header-card">
+                    <img src="img/galeria_pollojpg.jpg" alt="">
+                </header>
+                <footer class="footer-card">
+                    <div class="categoria-card"><span>Categoria</span></div>
+                    <div class="texto-card">
+                        <h3>Lorem ipsum dolor sit.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum perferendis quae eius minus consectetur ipsa at facilis aperiam omnis nam?</p>
+                    </div>
+                    <div class="perfil-card">
+                        <div class="img-perfil-card">
+                            <img src="img/man.png" alt="no se muestra imagen">
+                        </div>
+                        <div class="text_perfil card">
+                            <span>Nombre</span>
+                            <span>Fecha</span>
+                        </div>
+                    </div>
+                </footer>
+            </article>
+            <article class="card">
+                <header class="header-card">
+                    <img src="img/galeria_sushi.jpg" alt="">
+                </header>
+                <footer class="footer-card">
+                    <div class="categoria-card"><span>Categoria</span></div>
+                    <div class="texto-card">
+                        <h3>Lorem ipsum dolor sit.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum perferendis quae eius minus consectetur ipsa at facilis aperiam omnis nam?</p>
+                    </div>
+                    <div class="perfil-card">
+                        <div class="img-perfil-card">
+                            <img src="img/man.png" alt="no se muestra imagen">
+                        </div>
+                        <div class="text_perfil card">
+                            <span>Nombre</span>
+                            <span>Fecha</span>
+                        </div>
+                    </div>
+                </footer>
+            </article>
+            <article class="card">
+                <header class="header-card">
+                    <img src="img/galeria_hamb.jpg" alt="">
+                </header>
+                <footer class="footer-card">
+                    <div class="categoria-card"><span>Categoria</span></div>
+                    <div class="texto-card">
+                        <h3>Lorem ipsum dolor sit.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum perferendis quae eius minus consectetur ipsa at facilis aperiam omnis nam?</p>
+                    </div>
+                    <div class="perfil-card">
+                        <div class="img-perfil-card">
+                            <img src="img/man.png" alt="no se muestra imagen">
+                        </div>
+                        <div class="text_perfil card">
+                            <span>Nombre</span>
+                            <span>Fecha</span>
+                        </div>
+                    </div>
+                </footer>
+            </article>
+        </div>
+    </section>
 
     </main>
 
