--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         quod eos!</p>
                     <div class="cta-wrap_tarjeta-rest">
                         <div class="precio_tarjeta-rest">
-                            <span>$ 30000</span>
+                            <span>$ 19900</span>
                         </div>
                         <div class="cta_tarjeta-rest">
                             Pedir ahora
@@ -88,12 +88,12 @@
             </div>
             <div style="background: url(img/hamburguesa.jpg) center; background-size: cover;" class="tarjeta-rest">
                 <div class="wrap-text_tarjeta-rest">
-                    <h3>Pizza Especial</h3>
+                    <h3>Hamburguesa</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores adipisci corporis itaque, libero
                         quod eos!</p>
                     <div class="cta-wrap_tarjeta-rest">
                         <div class="precio_tarjeta-rest">
-                            <span>$ 30000</span>
+                            <span>$ 22900</span>
                         </div>
                         <div class="cta_tarjeta-rest">
                             Pedir ahora
@@ -103,12 +103,12 @@
             </div>
             <div style="background: url(img/sushi.jpg) center; background-size: cover;" class="tarjeta-rest">
                 <div class="wrap-text_tarjeta-rest">
-                    <h3>Pizza Especial</h3>
+                    <h3>Sushi Takoyaky</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores adipisci corporis itaque, libero
                         quod eos!</p>
                     <div class="cta-wrap_tarjeta-rest">
                         <div class="precio_tarjeta-rest">
-                            <span>$ 30000</span>
+                            <span>$ 25900</span>
                         </div>
                         <div class="cta_tarjeta-rest">
                             Pedir ahora
@@ -118,12 +118,12 @@
             </div>
             <div style="background: url(img/alitas_de_pollo.jpg) center; background-size: cover;" class="tarjeta-rest">
                 <div class="wrap-text_tarjeta-rest">
-                    <h3>Pizza Especial</h3>
+                    <h3>Alitas de pollo</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores adipisci corporis itaque, libero
                         quod eos!</p>
                     <div class="cta-wrap_tarjeta-rest">
                         <div class="precio_tarjeta-rest">
-                            <span>$ 30000</span>
+                            <span>$ 19900</span>
                         </div>
                         <div class="cta_tarjeta-rest">
                             Pedir ahora
@@ -141,7 +141,7 @@
         </div>
         <div class="column-3 columns">
             <div style="background: url(img/fondo_Rest.jpg) center; background-size: cover;" class="menu-restaurante">
-                <h3>Menú mediodia</h3>
+                <h3>Menú Especial</h3>
                 <hr>
                 <h4>Primeros Platos</h4>
                 <p>Lorem, ipsum dolor.</p>
@@ -155,10 +155,10 @@
                 <p>Lorem, ipsum.</p>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <br>
-                <p class="precio-menu">Precio: <span>17€</span></p>
+                <p class="precio-menu">Precio: <span>$ 42.900</span></p>
             </div>
             <div style="background: url(img/fondo_Rest.jpg) center; background-size: cover;" class="menu-restaurante">
-                <h3>Menú mediodia</h3>
+                <h3>Menú Mediodia</h3>
                 <hr>
                 <h4>Primeros Platos</h4>
                 <p>Lorem, ipsum dolor.</p>
@@ -172,10 +172,10 @@
                 <p>Lorem, ipsum.</p>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <br>
-                <p class="precio-menu">Precio: <span>17€</span></p>
+                <p class="precio-menu">Precio: <span>$ 32.900</span></p>
             </div>
             <div style="background: url(img/fondo_Rest.jpg) center; background-size: cover;" class="menu-restaurante">
-                <h3>Menú mediodia</h3>
+                <h3>Super Menú</h3>
                 <hr>
                 <h4>Primeros Platos</h4>
                 <p>Lorem, ipsum dolor.</p>
@@ -189,7 +189,7 @@
                 <p>Lorem, ipsum.</p>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <br>
-                <p class="precio-menu">Precio: <span>17€</span></p>
+                <p class="precio-menu">Precio: <span>$65.900</span></p>
             </div>
         </div>
     </section>
@@ -201,40 +201,40 @@
         </div>
         <div class="column-4 galeria-platos">
             <div class="imagen-galeria">
-                <img src="img/galeria_pollojpg.jpg" alt="">
+                <img src="img/galeria/alitas_polloc.jpg" alt="">
             </div>
             <div class="imagen-galeria">
-                <img src="img/galeria_pollojpg.jpg" alt="">
+                <img src="img/galeria/comiendo_pizza.jpg" alt="">
             </div>
             <div class="imagen-galeria">
-                <img src="img/galeria_pollojpg.jpg" alt="">
+                <img src="img/galeria/comiendo_sushi.jpg" alt="">
             </div>
             <div class="imagen-galeria">
-                <img src="img/galeria_pollojpg.jpg" alt="">
+                <img src="img/galeria/galeria_hamb.jpg" alt="">
             </div>
             <div class="imagen-galeria">
-                <img src="img/galeria_pollojpg.jpg" alt="">
+                <img src="img/galeria/galeria_pollojpg.jpg" alt="">
             </div>
             <div class="imagen-galeria">
-                <img src="img/galeria_pollojpg.jpg" alt="">
+                <img src="img/galeria/galeria_sushi.jpg" alt="">
             </div>
             <div class="imagen-galeria">
-                <img src="img/galeria_pollojpg.jpg" alt="">
+                <img src="img/galeria/hambu3.jpg" alt="">
             </div>
             <div class="imagen-galeria">
-                <img src="img/galeria_pollojpg.jpg" alt="">
+                <img src="img/galeria/pizza.jpg" alt="">
             </div>
             <div class="imagen-galeria">
-                <img src="img/galeria_pollojpg.jpg" alt="">
+                <img src="img/galeria/hamburguesa-sencilla.jpg" alt="">
             </div>
             <div class="imagen-galeria">
-                <img src="img/galeria_pollojpg.jpg" alt="">
+                <img src="img/galeria/comiendo_pizza.jpg" alt="">
             </div>
             <div class="imagen-galeria">
-                <img src="img/galeria_pollojpg.jpg" alt="">
+                <img src="img/galeria/pizza_casera.jpg" alt="">
             </div>
             <div class="imagen-galeria">
-                <img src="img/galeria_pollojpg.jpg" alt="">
+                <img src="img/galeria/sushi3.jpg" alt="">
             </div>
         </div>
     </section>
@@ -247,7 +247,7 @@
         <div class="card-wrap">
             <article class="card">
                 <header class="header-card">
-                    <img src="img/galeria_pollojpg.jpg" alt="">
+                    <img src="img/galeria/galeria_pollojpg.jpg" alt="">
                 </header>
                 <footer class="footer-card">
                     <div class="categoria-card"><span>Categoria</span></div>
@@ -269,7 +269,7 @@
             </article>
             <article class="card">
                 <header class="header-card">
-                    <img src="img/galeria_sushi.jpg" alt="">
+                    <img src="img/galeria/galeria_sushi.jpg" alt="">
                 </header>
                 <footer class="footer-card">
                     <div class="categoria-card"><span>Categoria</span></div>
@@ -291,7 +291,7 @@
             </article>
             <article class="card">
                 <header class="header-card">
-                    <img src="img/galeria_hamb.jpg" alt="">
+                    <img src="img/galeria/galeria_hamb.jpg" alt="">
                 </header>
                 <footer class="footer-card">
                     <div class="categoria-card"><span>Categoria</span></div>
