--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         quod eos!</p>
                     <div class="cta-wrap_tarjeta-rest">
                         <div class="precio_tarjeta-rest">
-                            <span>$ 22900</span>
+                            <span>$ 22.900</span>
                         </div>
                         <div class="cta_tarjeta-rest">
                             Pedir ahora
@@ -108,7 +108,7 @@
                         quod eos!</p>
                     <div class="cta-wrap_tarjeta-rest">
                         <div class="precio_tarjeta-rest">
-                            <span>$ 25900</span>
+                            <span>$ 25.900</span>
                         </div>
                         <div class="cta_tarjeta-rest">
                             Pedir ahora
@@ -123,7 +123,7 @@
                         quod eos!</p>
                     <div class="cta-wrap_tarjeta-rest">
                         <div class="precio_tarjeta-rest">
-                            <span>$ 19900</span>
+                            <span>$ 19.900</span>
                         </div>
                         <div class="cta_tarjeta-rest">
                             Pedir ahora
@@ -258,7 +258,7 @@
                     </div>
                     <div class="perfil-card">
                         <div class="img-perfil-card">
-                            <img src="img/man.png" alt="no se muestra imagen">
+                            <img src="img/image-daniel.jpg" alt="no se muestra imagen">
                         </div>
                         <div class="text_perfil card">
                             <span>Nombre</span>
@@ -280,7 +280,7 @@
                     </div>
                     <div class="perfil-card">
                         <div class="img-perfil-card">
-                            <img src="img/man.png" alt="no se muestra imagen">
+                            <img src="img/image-jonathan.jpg" alt="no se muestra imagen">
                         </div>
                         <div class="text_perfil card">
                             <span>Nombre</span>
@@ -302,7 +302,7 @@
                     </div>
                     <div class="perfil-card">
                         <div class="img-perfil-card">
-                            <img src="img/man.png" alt="no se muestra imagen">
+                            <img src="img/image-jeanette.jpg" alt="no se muestra imagen">
                         </div>
                         <div class="text_perfil card">
                             <span>Nombre</span>
